# roadmap.canonical.com

./: .env.example  .gitignore  .trivyignore  README.md  build.py  constitution.md  docker-compose.yaml  memory.md  products.yaml  pyproject.toml  requirements.txt  rockcraft.yaml  tox.ini
.github/workflows/: integration_test.yaml  publish.yaml  tests.yaml
app/: .env.example
app/src/: api.py
app/tests/: test_api.py
backend/: .env.example  Dockerfile  pyproject.toml
backend/src/: api.py  color_logic.py  db_schema.sql  jira_sync.py  settings.py
backend/templates/: base.html  roadmap.html
backend/tests/: conftest.py  test_api.py  test_color_logic.py  test_jira_sync.py
charm/: charmcraft.yaml  secrets  tox.ini
charm/src/: charm.py
docs/: index.md
docs/explanation/: architecture.md  authentication.md  color-health-logic.md  cycle-lifecycle.md  jira-sync-pipeline.md  product-jira-mapping.md  snapshots.md
docs/how-to/: change-reports.md  configuring-authentication.md  getting-started.md  managing-cycles.md  managing-products.md  running-tests.md  triggering-sync.md
docs/reference/: api.md  capacity-planning-spec.md  configuration.md  database-schema.md  project-structure.md
src/: app.py  auth.py  color_logic.py  database.py  db_schema.sql  jira_sync.py  planning.py  scheduler.py  settings.py
static/: index.html
templates/: base.html  planning.html  roadmap.html
templates/planning/: _availability.html  _config.html  (+2 more)
tests/: conftest.py  test_api.py  test_color_logic.py  test_cycle_freeze.py  test_jira_sync.py  test_planning.py  test_snapshots.py
(+2 files in other folders)
